--- a/app/res/layout/activity_hquser_invite.xml
+++ b/app/res/layout/activity_hquser_invite.xml
@@ -97,4 +97,18 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.35" />
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyle"
+        android:layout_centerHorizontal="true"
+        android:progressTint="@color/connect_blue_color"
+        android:progressBackgroundTint="@color/connect_blue_color"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_go_to_recovery" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
