--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -208,8 +208,8 @@
     </style>
 
     <style name="DetailDrawerPulldown">
-        <item name="even_row_color">@color/cc_brand_bg</item>
-        <item name="odd_row_color">@color/drawer_pulldown_odd_row_color</item>
+        <item name="even_row_color">@color/transparent</item>
+        <item name="odd_row_color">@color/cc_neutral_bg</item>
     </style>
 
     <style name="ScreenPinnedButtonBase">
