Change button default visibility state

--- a/app/res/layout/progress_dialog_cancel_button.xml
+++ b/app/res/layout/progress_dialog_cancel_button.xml
@@ -14,5 +14,5 @@
     android:layout_marginBottom="@dimen/standard_spacer"
     android:padding="@dimen/standard_spacer"
     android:text="STOP"
-    android:visibility="visible"
+    android:visibility="gone"
     tools:viewBindingIgnore="true" />
