--- a/app/res/drawable/ic_connect_arrow_forward_24px.xml
+++ b/app/res/drawable/ic_connect_arrow_forward_24px.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="20">
   <path
       android:pathData="M10,3.333L8.825,4.508L13.475,9.166H3.333V10.833H13.475L8.825,15.491L10,16.666L16.667,10L10,3.333Z"
-      android:fillColor="@color/connect_dark_blue_color"/>
+      android:fillColor="@color/cc_brand_color"/>
 </vector>
