--- a/app/res/layout/fragment_phone_available_bottom_sheet.xml
+++ b/app/res/layout/fragment_phone_available_bottom_sheet.xml
@@ -69,25 +69,21 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView">
 
-                <org.commcare.views.connect.RoundedButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/back_button"
+                    style="@style/NegativeButtonStyle"
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_alignParentLeft="true"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
-                    android:gravity="start|center"
-                    android:text="Back"
-                    app:roundButtonBorderColor="@color/border_grey"
-                    app:roundButtonBorderVisible="true"
-                    app:roundButtonTextColor="@color/connect_blue_color" />
+                    android:text="Back" />
 
-                <org.commcare.views.connect.RoundedButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/recover_button"
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
@@ -95,11 +91,7 @@
                     android:layout_marginBottom="16dp"
                     android:gravity="start|center"
                     android:text="Recover"
-                    app:roundButtonBackgroundColor="@color/connect_blue_color"
-                    app:roundButtonBorderRadius="@dimen/dp48"
-                    app:roundButtonIcon="@drawable/connect_right_arrow"
-                    app:roundButtonIconLeftAlign="false"
-                    app:roundButtonTextColor="@color/white" />
+                    android:drawableRight="@drawable/connect_right_arrow" />
             </RelativeLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
