--- a/app/res/layout/screen_connect_user_deactivate_otp_verify.xml
+++ b/app/res/layout/screen_connect_user_deactivate_otp_verify.xml
@@ -128,41 +128,21 @@
             android:layout_marginBottom="16dp"
             android:orientation="horizontal">
 
-            <org.commcare.views.connect.RoundedButton
+            <com.google.android.material.button.MaterialButton
+                style="@style/NegativeButtonStyle"
                 android:id="@+id/connect_resend_button"
-                android:layout_width="150dp"
-                android:layout_height="45dp"
-                android:layout_gravity="end"
-                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:visibility="gone"
-                android:text="@string/connect_verify_phone_resend_code"
-                app:roundButtonBackgroundColor="@color/white"
-                app:roundButtonBorderRadius="@dimen/dp48"
-                app:roundButtonIconLeftAlign="false"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                app:roundButtonIconTintColor="@color/white"
-                app:roundButtonTextColor="@color/connect_blue_color"
-                app:roundButtonBorderWidth="0.5dp"
-                app:roundButtonBorderVisible="true"
-                app:roundButtonBorderColor="@color/connect_blue_color"
-                app:roundButtonTextSize="6.5sp" />
+                android:text="@string/connect_verify_phone_resend_code" />
 
-            <org.commcare.views.connect.RoundedButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/connect_phone_verify_button"
                 android:layout_width="wrap_content"
-                android:layout_height="45dp"
-                android:layout_gravity="end"
-                android:gravity="start|center"
-                android:layout_alignParentTop="true"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="@string/connect_verify_phone_verify"
-                app:roundButtonBackgroundColor="@color/connect_blue_color"
-                app:roundButtonBorderRadius="@dimen/dp48"
-                app:roundButtonIconLeftAlign="false"
-                app:roundButtonIconTintColor="@color/white"
-                app:roundButtonTextColor="@color/white"
-                app:roundButtonTextSize="6.5sp" />
+              />
 
         </RelativeLayout>
     </LinearLayout>
