--- a/app/res/layout/temp_login.xml
+++ b/app/res/layout/temp_login.xml
@@ -268,26 +268,16 @@
                                     android:textSize="@dimen/font_size_medium"
                                     android:visibility="gone" />
 
-                                <org.commcare.views.connect.RoundedButton
+                                <com.google.android.material.button.MaterialButton
                                     android:id="@+id/login_button"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="end"
                                     android:layout_marginVertical="24dp"
                                     android:text="Login with Connect ID"
-                                    RectangleButtonWithText:roundButtonBackgroundColor="@color/connect_blue_color"
-                                    RectangleButtonWithText:roundButtonIcon="@drawable/connect_right_arrow"
-                                    RectangleButtonWithText:roundButtonTextColor="@color/white"
-                                    RectangleButtonWithText:roundButtonTextSize="6sp"
+                                    android:drawableRight="@drawable/connect_right_arrow"
                                     />
-                                <!--<Button
-                                    android:id="@+id/login_button"
-                                    android:layout_width="fill_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="bottom"
-                                    android:nextFocusUp="@+id/edit_password"
-                                    android:paddingTop="@dimen/content_start"
-                                    android:paddingBottom="@dimen/content_start" />-->
+
 
                                 <LinearLayout
                                     android:id="@+id/screen_login_error_view"
