--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -317,14 +317,13 @@
         <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
             <item name="backgroundTint">@color/primary_button_background</item>
             <item name="android:textColor">@color/white</item>
-            <item name="android:textSize">16sp</item>
+
+            <item name="android:letterSpacing">0</item>
             <item name="android:gravity">center</item>
             <item name="android:padding">12dp</item>
             <item name="height">40dp</item>
             <item name="cornerRadius">@dimen/rounded_button_corner_radius</item>
             <item name="iconPadding">8dp</item>
-            <item name="android:textAllCaps">false</item>
-            <item name="android:textStyle">bold</item>
             <item name="android:layout_margin">@dimen/spacer_small</item>
         </style>
     
