--- a/app/res/drawable/rounded_button_shape.xml
+++ b/app/res/drawable/rounded_button_shape.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"   >
-
-    <size
-        android:minHeight="@dimen/min_button_height">
-    </size>
-
-    <corners android:radius="@dimen/rounded_button_corner_radius"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:top="2dp" android:left="2dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/darker_gray" />
+            <corners android:radius="@dimen/rounded_button_corner_radius" />
+        </shape>
+    </item>
+</layer-list>
