--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -311,13 +311,17 @@
     <style name="AlertDialogButtonStyle" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
         <item name="android:background">@drawable/rounded_button_shape</item>
         <item name="android:minWidth">@dimen/min_button_width</item>
+        <item name="android:minHeight">@dimen/min_button_height</item>
+        <item name="android:layout_marginTop">1dp</item>
+        <item name="android:layout_marginBottom">1dp</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:elevation">2dp</item>
         <item name="backgroundTint">@color/cc_brand_color</item>
     </style>
 
         <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
             <item name="backgroundTint">@color/primary_button_background</item>
             <item name="android:textColor">@color/white</item>
-
             <item name="android:letterSpacing">0</item>
             <item name="android:gravity">center</item>
             <item name="android:padding">12dp</item>
