Resized refresh icon to match notification icon. Localized messaging page title. Fixed possible infinite recursion when backing up from jobs list. Not updating message page if the user already navigated away.

--- a/app/res/navigation/nav_graph_connect_messaging.xml
+++ b/app/res/navigation/nav_graph_connect_messaging.xml
@@ -23,7 +23,7 @@
     <fragment
         android:id="@+id/channelListFragment"
         android:name="org.commcare.fragments.connectMessaging.ConnectMessageChannelListFragment"
-        android:label="Message"
+        android:label="@string/connect_messaging_title"
         tools:layout="@layout/fragment_channel_list" >
         <action
             android:id="@+id/action_channelListFragment_to_channelConsentBottomSheet"
