--- a/app/res/layout/screen_connect_verify.xml
+++ b/app/res/layout/screen_connect_verify.xml
@@ -68,7 +68,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/connect_verify_fingerprint_button"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="16dp"
@@ -102,7 +102,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/connect_verify_pin_button"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="16dp"
