--- a/app/res/layout/dialog_payment_confirmation.xml
+++ b/app/res/layout/dialog_payment_confirmation.xml
@@ -66,18 +66,18 @@
                 style="@style/NegativeButtonStyle"
                 android:id="@+id/ri_no"
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:text="@string/connect_payment_dialog_no"
-                android:textSize="5dp" />
+                 />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/ri_yes"
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
+                android:layout_height="wrap_content"
                 android:text="@string/connect_payment_dialog_yes"
                 android:textColor="@color/white"
-                android:textSize="5sp" />
+                />
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
