--- a/app/res/layout/fragment_connect_job_intro.xml
+++ b/app/res/layout/fragment_connect_job_intro.xml
@@ -106,7 +106,7 @@
                             android:layout_gravity="center"
                             android:layout_marginStart="20dp"
                             android:gravity="center"
-                            android:text="Continue"
+                            android:text="@string/connect_recovery_button_phone"
                             android:drawableRight= "@drawable/ic_connect_arrow_forward_24px"
                             android:backgroundTint= "@color/white"
                             android:textColor= "@color/cc_brand_color" />
