--- a/app/res/layout/custom_alert_dialog.xml
+++ b/app/res/layout/custom_alert_dialog.xml
@@ -76,7 +76,10 @@
                 android:id="@+id/positive_button"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/min_button_height"
-                android:padding="@dimen/standard_spacer"
+                android:padding="@dimen/standard_spacer_half"
+                android:paddingEnd="@dimen/standard_spacer"
+                android:paddingStart="@dimen/standard_spacer"
+                android:includeFontPadding="false"
                 android:visibility="gone"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="@dimen/standard_spacer"
@@ -88,9 +91,12 @@
                 android:id="@+id/neutral_button"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/min_button_height"
-                android:padding="@dimen/standard_spacer"
                 android:layout_marginEnd="@dimen/standard_spacer"
                 android:layout_marginStart="@dimen/spacer_small"
+                android:padding="@dimen/standard_spacer_half"
+                android:paddingEnd="@dimen/standard_spacer"
+                android:paddingStart="@dimen/standard_spacer"
+                android:includeFontPadding="false"
                 android:visibility="gone"
                 android:layout_toStartOf="@id/positive_button"
                 android:textSize="@dimen/font_size_medium"/>
@@ -100,7 +106,10 @@
                 android:id="@+id/negative_button"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/min_button_height"
-                android:padding="@dimen/standard_spacer"
+                android:padding="@dimen/standard_spacer_half"
+                android:paddingEnd="@dimen/standard_spacer"
+                android:paddingStart="@dimen/standard_spacer"
+                android:includeFontPadding="false"
                 app:strokeColor="@color/cc_brand_color"
                 android:visibility="gone"
                 android:layout_marginStart="@dimen/spacer_small"
