Forcing style for MaterialButtons in ConnectID screens (style wasn't being applied in fragments).

--- a/app/res/layout/screen_connect_message.xml
+++ b/app/res/layout/screen_connect_message.xml
@@ -34,6 +34,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/connect_message_button"
+                style="@style/CustomButtonStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/content_start"
@@ -42,6 +43,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/connect_message_button2"
+                style="@style/CustomButtonStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
