--- a/app/res/layout/screen_connect_verify.xml
+++ b/app/res/layout/screen_connect_verify.xml
@@ -68,6 +68,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/connect_verify_fingerprint_button"
+                    style="@style/CustomButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
@@ -102,6 +103,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/connect_verify_pin_button"
+                    style="@style/CustomButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
