--- a/app/res/layout/fragment_recovery_code.xml
+++ b/app/res/layout/fragment_recovery_code.xml
@@ -184,6 +184,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/connect_pin_button"
+            style="@style/CustomButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/connect_pin_error_message"
