--- a/app/res/layout/screen_connect_password_verify.xml
+++ b/app/res/layout/screen_connect_password_verify.xml
@@ -116,6 +116,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/connect_password_verify_button"
+            style="@style/CustomButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
